added UI halal rating green

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -40,6 +40,54 @@
 
         <div class="space60"></div>
 
+        <div class="halal-star-rating-left">
+          <h6>Halal Star Rating</h6>
+
+          <div class="rating-row">
+            <div class="custom-checkbox">
+              <input id="one" class="css-checkbox" type="checkbox">
+              <label for="one" name="demo_lbl_1" class="css-label"></label>
+            </div>
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+          </div>
+
+          <div class="rating-row">
+            <div class="custom-checkbox">
+              <input id="two" class="css-checkbox" type="checkbox">
+              <label for="two" name="demo_lbl_1" class="css-label"></label>
+            </div>
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+          </div>
+
+          <div class="rating-row">
+            <div class="custom-checkbox">
+              <input id="three" class="css-checkbox" type="checkbox">
+              <label for="three" name="demo_lbl_1" class="css-label"></label>
+            </div>
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+          </div>
+
+          <div class="rating-row">
+            <div class="custom-checkbox">
+              <input id="four" class="css-checkbox" type="checkbox">
+              <label for="four" name="demo_lbl_1" class="css-label"></label>
+            </div>
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+            <img src="../assets/images/search-form/halal-rating-star.png" alt="">
+          </div>
+
+          
+        </div>
+
         <div class="star-rating-left">
           <h6>star rating</h6>
 
@@ -93,6 +141,8 @@
             <img src="../assets/images/search-form/rating-star.png" alt="">
           </div>
         </div>
+
+        
 
         <div class="space60"></div>
 
