update with halal

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,3 +2,69 @@
     width: 269.7px;
     height: 220px;
 }
+
+
+/* The rating-row-radio */
+.rating-row-radio {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .rating-row-radio input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .css-labelradio {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 25%;
+    border: 1px solid #ababab;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .rating-row-radio:hover input[type="radio"] ~ .css-labelradio {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .rating-row-radio input[type="radio"]:checked ~ .css-labelradio {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .css-labelradio:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .rating-row-radio input[type="radio"]:checked ~ .css-labelradio:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .rating-row-radio .css-labelradio:after {
+       top: 9px;
+      left: 9px;
+      width: 8px;
+      height: 8px;
+      border-radius: 25%;
+      background: white;
+  }
